--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //----------------
+    //implementation files('../app/libs/fingerPrintDetector.aar')
     implementation files('../app/libs/fingerPrintDetector.aar')
     implementation project(path: ':opencv')
     //----------------
