new aar version added

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ android.enableJetifier=true
 android.overridePathCheck=false
 android.enableDexingArtifactTransform.desugaring=true
 android.useNewApkCreator=true
+authToken: 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
+
